syntax = "proto3";

option go_package = "github.com/wei840222/todo/proto";
option java_multiple_files = true;
option java_package = "com.github.wei840222.todo";
option java_outer_classname = "TodoProto";

import "google/protobuf/empty.proto";

package todo;

service Todo {
    rpc ListTodos (google.protobuf.Empty) returns (ListTodoResponse) {}
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse) {}
}

message TodoResponse {
    string id = 1;
    string text = 2;
    bool done = 3;
}

message ListTodoResponse {
    repeated TodoResponse todos = 1;
}

message CreateTodoRequest {
    string text = 1;
}

message CreateTodoResponse {
    string id = 1;
}
